syntax = "proto3";

import "common/common.proto";

option java_package = "com.syscho.grpc.auto.user";
option java_multiple_files = true;


service UserService{
  rpc getUserInfo(UserRequest) returns (UserResponse);
  rpc updateInfo(UserUpdateRequest) returns (UserResponse);
}

message UserRequest{
  string user_id = 1;
}

message UserUpdateRequest{
  string user_id = 1;
  int32 age = 2;
  string emailId = 3;
  common.Gender gender = 4;
    common.Genre  genre = 5;

}


message UserResponse{
  string user_id = 1;
  string name = 2;
  int32 age = 3;
  string emailId = 4;
  common.Gender gender = 5;
  common.Genre  genre = 6;
}